After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778828 - hlsdemux: Fix GHashTable leak
hlsdemux: Fix GHashTable leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.10.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-17 12:29 UTC by Seungha Yang
Modified: 2017-02-22 09:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
hlsdemux: Fix GHashTable leak (818 bytes, patch)
2017-02-17 12:30 UTC, Seungha Yang
none Details | Review

Description Seungha Yang 2017-02-17 12:29:26 UTC
Internal GHashTable object did not unrefed
Comment 1 Seungha Yang 2017-02-17 12:30:18 UTC
Created attachment 346062 [details] [review]
hlsdemux: Fix GHashTable leak
Comment 2 Tim-Philipp Müller 2017-02-21 13:12:11 UTC
Thanks!

commit b1efa8d4993fc5095c83fe27694ba9c225f70efd
Author: Seungha Yang <sh.yang@lge.com>
Date:   Fri Feb 17 21:25:21 2017 +0900

    hlsdemux: Fix GHashTable leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=778828