hlsdemux: Fix GHashTable leak

https://bugzilla.gnome.org/show_bug.cgi?id=778828